# crynux-mcp

./: AGENTS.md  README.md  RELEASE.md  pyproject.toml
docs/: tools.md
src/crynux_mcp/: __init__.py  __main__.py  server.py
src/crynux_mcp/blockchain/: __init__.py  evm_client.py  schemas.py
src/crynux_mcp/config/: __init__.py  chains.json  loader.py  relay.json
src/crynux_mcp/relay/: __init__.py  auth.py  client.py  config.py  models.py
src/crynux_mcp/security/: __init__.py  key_store.py  redaction.py  schemas.py
tests/: test_evm_client.py  test_key_store.py  test_key_tools_contract.py  test_relay_auth.py  test_relay_client_paths.py  test_relay_tools_contract.py  test_tools_contract.py
